--- a/src/component/features/feature.css
+++ b/src/component/features/feature.css
@@ -10,10 +10,10 @@ h2,p{
 .featuredMovie{
     margin: 3rem;
 }
-.mde{
+.mode{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 4px;
+    gap: 30px;
 }
 .movieList{
     width: 250px;
@@ -54,4 +54,58 @@ h2,p{
     font-size: 12px;
     color: rgba(156, 163, 175, 1);
     padding-top: 0.5rem;
+}
+
+@media only screen and (max-width:900px){
+    .mode{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        /* gap: 4px; */
+    }
+}
+@media only screen and (max-width:600px){
+    .logo img{
+        padding-right: 0.5rem;
+        width: 50%;
+    }
+    .logo h2{
+        font-size: 15px;
+        color: white;
+    }
+    .signIn{
+        display: flex;
+        justify-items: space-between;
+        align-items: center;
+    }
+    .signIn img{
+        padding-left: 0.5rem;
+        width: 30%;
+    }
+    .signIn h2{
+        color: white;
+        font-size: 15px;
+    }
+    .searchMovie input::placeholder{
+        color: white;
+        font-size: 13px;
+    }
+    .descriptionbox h2{
+        color: white;
+        font-size: 35px;
+        font-weight: 700;
+        line-height: 36px;
+        text-align: left;
+        padding-top: 2rem;
+    }
+    @media only screen and (max-width:500px){
+        .featuredMovie{
+            margin: 2rem;
+        }
+        .mode{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            /* width: 100%; */
+            gap: 4px;
+        }
+    }
 }
