--- a/src/component/movies/movies.css
+++ b/src/component/movies/movies.css
@@ -82,3 +82,43 @@ h2,p{
     height: 100%;
     object-fit: cover;
 }
+@media only screen and (max-width:900px){
+    .mode{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        /* gap: 4px; */
+    }
+}
+@media only screen and (max-width:600px){
+    .mode{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        /* gap: 4px; */
+    }
+}
+@media only screen and (max-width:500px){
+    .featuredMovie{
+        margin: 2rem;
+    }
+    .mode{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        /* width: 100%; */
+        gap: 4px;
+    }
+    .poster{
+        height: 400px;
+        width: 200px;
+        display: flex;
+        /* gap: 4; */
+        flex-direction: column;
+        padding-top: 3rem;
+    }
+}
+@media only screen and (max-width:400px){
+    .mode{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        /* gap: 4px; */
+    }
+}
